--- a/Fullstack Developer Curriculum - On going/02. CSS Basics/15 -  Confidential Email Page/styles.css
+++ b/Fullstack Developer Curriculum - On going/02. CSS Basics/15 -  Confidential Email Page/styles.css
@@ -1,3 +1,21 @@
 #email {
     padding: 50px;
+    margin-top: 50px;
+    width: 500px;
+    border: 2px solid green;
+
+    box-sizing: border-box;
+}
+
+#confidential,
+#top-secret {
+    display: inline-block;
+    padding: 15px;
+    margin-left: 5%;
+    border: 3px solid red;
+    transform: rotate(50deg);
+}
+
+.blurred {
+    filter: blur(3px);
 }
